--- a/ai_eval/c.yaml
+++ b/ai_eval/c.yaml
@@ -5,14 +5,21 @@ defaults: &defaults
         temperature: 0.9
 
 app:
-    app_func:
-        app_architecture: simple_chatbot
-        model_settings: *defaults
-        input: state.messages
-        stop_func:
-            max_chat_tokens: 500
-            max_inputs: 5
-            end_token: END
+  tools:
+    google_searcher: 
+    cousin_agent: 
+    tweet: 
+  app_controller:
+    architecture: simple_chatbot
+    model_settings: 
+      <<: *defaults
+    system_prompt: >
+      Be good.
+    inputs: state.messages
+    stop_func:
+        max_chat_tokens: 500
+        max_inputs: 5
+        end_token: END
 
 evaluators: 
     # def eval_func(scorer, state, params, in_range, target)
@@ -21,31 +28,33 @@ evaluators:
     #   return alignment
 
     message_sentiment_classifier: 
-        input: state.each_message
-        params: 
-            classes: [ engaged, bored ]
-        target: engaged
-        in_range: all
+      inputs: state.each_message
+      params: 
+          classes: [ engaged, bored ]
+      target: engaged
+      in_range: all
 
     topic_detection:
         state: state
     
     generic_llm_judge:
-        state: state
-        params:
-            eval_prompt: Score this conversation from 1 to 5
-        target: 5
+      state: state
+      params:
+          eval_prompt: Score this conversation from 1 to 5
+      target: 5
 
 simulations:
-    user_func:
-        user_architecture: simple_human
-        model_settings: *defaults
-        state: state
-        stop_func:
-            max_chat_tokens: 500
-            max_inputs: 5
-            end_token: END
+  user_func:
+      architecture: simple_human # f(state): return state_delta or None
+      model_settings: *defaults
+      inputs: state
+      stop_func:
+          max_chat_tokens: 500
+          max_inputs: 5
+          end_token: END
 
+  sweeps:
+    sweep_strategy: auto
     personas:
         grad: An undergraduate student in Kentucky who likes spatial geometry
         phd: A PhD student in California who likes to garden
@@ -53,8 +62,15 @@ simulations:
         disgruntled_teacher: A teacher fired from their job and disappointed with the system
         
     scenarios:
-        scheme: Talk about a random topic
-        solve: Solve a difficult math problem
-        explain: Explain a complex scientific concept
-        disgruntled: Say something terrible about Khan Academy
+      scheme: Talk about a random topic
+      solve: Solve a difficult math problem
+      explain: Explain a complex scientific concept
+      disgruntled: Say something terrible about Khan Academy
         
+    model_settings.hyperparameters.temperature:
+      min: 0.1
+      max: 1.0
+      step: 0.1
+
+
+
